--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     --bg-color:#1d242d;
     --secondary-bg-color:#323946;
     --text-color:#fff;
-    --main-color:#0ef;
+    --main-color:#14d192;
 }
 
 html{
@@ -51,19 +51,18 @@ header{
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    cursor: default
-
-    ;
+     font-family: 'Times New Roman', Times, serif;
+    cursor: default;
 }
 
 .navbar a{
-    font-size: 1.7rem;
+    font-size: 1.8rem;
     color: var(--text-color);
     margin-left: 4rem;
      
     
 }
+ 
 .navbar a:hover,
 .navbar a.active{
     color: var(--main-color);
@@ -82,6 +81,7 @@ header{
  
 .home-img img{
     width: 35vw;
+    
 ;
     animation:floatImage 4s ease-in-out infinite;
 }
@@ -165,9 +165,9 @@ font-size: 1.6rem;
 }
 
 .about-img img{
-    width:30vw;
-    padding: 3rem;;
-}
+    width:35vw;
+    animation:floatImage 4s ease-in-out infinite;
+ }
 .heading{
     text-align: center;
     font-size: 4.5rem;
@@ -223,7 +223,7 @@ border: .2rem solid var(--bg-color);
     margin:1rem 0 3rem;
 }
 
-.portfolio{
+.portfolio ,.skills{
     background: var(--secondary-bg-color);
 }
 .portfolio h2{
@@ -388,7 +388,7 @@ font-size: 1.6rem;
   .services{
     padding-bottom: 7rem;
   }
-  .portfolio{
+  .portfolio,.skills{
     padding-bottom: 7rem;
   }
   .contact{
@@ -413,14 +413,15 @@ font-size: 1.6rem;
         background: var(--bg-color);
         border-top: .1rem solid rgba(0,0,0,.2);
         box-shadow: 0.5rem 1rem rgba(0,0,0,.2);
-       
-
+        display: none;
     }
-  .navbar .active{
+  .navbar.active{
     display:block;
+    
   }
     .navbar a {
         display:block;
+        text-align: center;
         font-size: 2rem;
         margin:3rem 0;
 
@@ -495,3 +496,99 @@ grid-template-columns: 1fr;
         margin-top: 2rem;
     }
 }
+
+
+
+.skillcontainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background: var(--bg-color);
+    height: 100vh;
+  }
+  .skillcontainer .wrapper{
+    width: 800px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .skillcontainer .wrapper .card{
+    background:var(--secondary-bg-color);
+    width: calc(33% - 20px);
+    height: 300px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+     
+  }
+  .wrapper .card:hover{
+    background-color: var(--main-color);
+    color:var(--bg-color);
+    transform: translateY(-14px);
+    transition: background 1s, color 1s, transform 0.5s;
+  }
+  .skillcontainer .wrapper .card .circle{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    cursor: default;
+  }
+  .skillcontainer .card .circle .box,
+  .skillcontainer .card .circle .box span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+  .skillcontainer .card .circle .box{
+    height: 100%;
+    width: 100%;
+    background: #fff;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0.8);
+    transition: all 0.2s;
+  }
+  .skillcontainer .card .circle:hover .box{
+    transform: translate(-50%, -50%) scale(0.91);
+  }
+  .skillcontainer .card .circle .box span,
+  .skillcontainer .wrapper .card .text{
+    background: -webkit-linear-gradient(left, #a445b2, #fa4299);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .skillcontainer .circle .box span{
+    font-size: 38px;
+    font-family: sans-serif;
+    font-weight: 600;
+    transform: translate(-45%, -45%);
+    transition: all 0.1s;
+  }
+  .skillcontainer .card .circle:hover .box span{
+    transform: translate(-45%, -45%) scale(1.09);
+  }
+  .skillcontainer .card .text{
+    font-size: 20px;
+    font-weight: 600;
+  }
+  @media(max-width: 753px){
+    .skillcontainer .wrapper{
+      max-width: 700px;
+    }
+    .skillcontainer  .wrapper .card{
+      width: calc(50% - 20px);
+      margin-bottom: 20px;
+    }
+  }
+  @media(max-width: 505px){
+    .skillcontainer .wrapper{
+      max-width: 500px;
+    }
+    .skillcontainer .wrapper .card{
+      width: 100%;
+    }
+  }
